Update Composer File

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "aneeqtariq143/laravelrbac",
+    "name": "aneeq/laravelrbac",
     "description": "Role Based Access Control For Laravel Projects",
     "type": "library",
     "license": "MIT",
